fix logo bug on safari

--- a/src/styles.css
+++ b/src/styles.css
@@ -72,6 +72,9 @@ footer.footer {
   background-image: url("/assets/bg/thai-bg.jpg");
 }
 
+.footer-logo{
+  width: 100%;
+}
 
 /* Custom page CSS
 -------------------------------------------------- */
